# Copyright 2025 The Lynxtron Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

source_set("legacy") {
  sources = [
    "texture-view/lynx_texture_view.cc",
    "texture-view/lynx_texture_view.h",
  ]

  include_dirs = [
    "//",
    "//src",
    "//lynx",
    "//lynx/lynx",
    "$root_gen_dir/lynxtron",
    "$target_gen_dir",
  ]

  deps = [ "//base" ]
}
