# Copyright 2026 The Lynxtron Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

source_set("resource_fetcher") {
  include_dirs = [
    "../../../",
    "../../",
    "//node/deps/uv/include",
  ]

  sources = [
    "lynx_generic_resource_fetcher_impl.cc",
    "lynx_generic_resource_fetcher_impl.h",
  ]

  deps = [
    "//base",
    "//third_party/node:libnode",
  ]
}
